+ updated logic between request and extract functions to make them more consistent + started war info implementation

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 clan members info example.json
 ClanMembersInfo.txt
 single player example.json
+clan war example.json
 src/main/java/com/alessio/coc/Constants.java
 
 ### Intellij ###
