--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,maven,intellij,macos,netbeans
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,intellij,macos,netbeans
 
-clan members info example.json
+src/main/resources/examples/
 ClanMembersInfo.txt
-single player example.json
-clan war example.json
 src/main/java/com/alessio/coc/Constants.java
 
 ### Intellij ###
