+ changed constants handling

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 src/main/resources/examples/
 ClanMembersInfo.txt
 WarInfo.txt
-src/main/java/com/alessio/coc/Constants.java
+ClanTag.txt
+Token.txt
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
