~ updated gitignore to ignore a new file

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ MembersWhoLeft.txt
 WarInfo.txt
 ClanTag.txt
 Token.txt
+Note.txt
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
